--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
-spring.datasource.url=
-spring.datasource.username=
-spring.datasource.password=
-telegram.bot.token=
+spring.datasource.url= jdbc:postgresql://localhost:5432/telegramBot
+spring.datasource.username= myUser
+spring.datasource.password= youarewelcome
+telegram.bot.token= 5662984172:AAEV2VvAjFbYDtDjSVVm7jdtWbKTy5osMMY
+
+spring.liquibase.change-log=classpath:liquibase/changelog-master.yml
